# demo-rs-ndk

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/arnabanimesh/demorsndk/: ExampleInstrumentedTest.kt
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/arnabanimesh/demorsndk/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs
app/src/main/rust/src/android/: graphic.rs  julia.rs
app/src/test/java/com/arnabanimesh/demorsndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
