[package]
edition = "2021"
name = "rust"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(target_os="android")'.dependencies]
image = "0.24.1"
jni = {version = "0.19", default-features = false}
num-complex = "0.4.0"

[lib]
crate-type = ["dylib"]
name = "rust"
